tests/e2e/keyword_to_service_argument.error
Error: syntax error in story at line 1, column 20

1|    http fetch url: "" to: "" // Idea is to demonstrate argument `to` is parsed successfully.
                         ^^^^^^

E0141: http action `fetch` does not accept argument `to`.
