tests/e2e/keyword_to_service_argument.story
http fetch url: "" to: "" // Idea is to demonstrate argument `to` is parsed successfully.
